--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use "./vars" as variable;
+@use "./mixin.scss";
 
 body {
   font-family: variable.$font-family-df;
